--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,10 +1,8 @@
 {% extends "artists/base.html" %}
-
-{% block content %}
-<h2>You Have Been Logged Out!</h2>
-<div class="border-top pt-3">
-    <small class="text-muted">
-        <a href="{% url 'login' %}">Login Now</a>
+{% block content%}
+<h2 class="pb-2 border-bottom border-dark">You have been logged out!</h2>
+<div class="pt-3">
+    <small class="text-muted"><a href="{% url 'login' %}" class="ml-1">Login Now!</a>
     </small>
 </div>
 {% endblock content %}
