--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,26 +1,19 @@
-{% extends "blog/base.html" %}
-{% load crispy_forms_tags %}
-
-{% block content %}
-<div class="content-section">
-    <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-        <div class="media-body">
-            <h2 class="account-heading">{{ user.username }}</h2>
-            <p class="text-secondary">{{ user.email }}</p>
-        </div>
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">
-                    Profile Info:
-                </legend>
-                {{ u_form|crispy }}
-                {{ p_form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Update</button>
-            </div>
-        </form>
+{% extends "artists/base.html" %} {% load crispy_forms_tags %}
+{% block content%}
+<div class="container pt-3 col-12">
+  <form method="POST">
+    {% csrf_token %}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Join Today</legend>
+      {{ form | crispy }}
+    </fieldset>
+    <div class="form-group">
+      <button class="btn btn-outline-info" type="submit">Sign Up</button>
     </div>
-    {% endblock content %}
+  </form>
+  <div class="border-top pt-3">
+    <small class="text-muted">Already have an account? <a href="{% url 'login' %}" class="ml-1">Sign In</a>
+    </small>
+  </div>
+</div>
+{% endblock content %}
