Added Shows, Artists, and Tour Functions
Adding functionality to the "Add Artist," "Add Tour," and "Add Shows" buttons.

--- a/artists/templates/artists/artist-list.html
+++ b/artists/templates/artists/artist-list.html
@@ -17,7 +17,7 @@
             {% for artist in artist_list %}
             <tr class="border-bottom border-dark">
                 <th scope="row" class="border-right border-dark pr-3 pl-1">{{ artist.artist_Name }}<a href="#"
-                        class="badge badge-dark ml-2">Edit</a>
+                        class="badge badge-dark ml-2 mb-2">Edit</a>
                 </th>
                 <td class="pl-1 border-right border-dark">{{ artist.artist_Genre }}</td>
                 <td class="text-right border-right border-dark">{{ artist.artist_Show_Count }}</td>
