--- a/artists/templates/artists/shows.html
+++ b/artists/templates/artists/shows.html
@@ -19,7 +19,7 @@
                         </tr>
                     </thead>
                     <tbody class="border-bottom border-dark">
-                        {% for artist in artist_list.all %}
+                        {% for artist in artist_list %}
                         <tr class="border-bottom border-dark">
                             <th scope="row" class="border-right border-dark p-3 ">1/1/2019</th>
                             <td class="p-3 border-right border-dark">Venue #1</td>
