--- a/shows/templates/add-show.html
+++ b/shows/templates/add-show.html
@@ -1,15 +1,12 @@
 {% extends "artists/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-
-
-<div class="container mt-5 pt-3 w-100">
-    <form action="/your-name/" method="post">
+<form id="add-artist" method="post">
+    <legend>
         <h2>Add Show</h2>
-        {% csrf_token %}
-        {{ form|crispy }}
-    </form>
-</div>
-
-
+    </legend>
+    {% csrf_token %}
+    {{ form|crispy }}
+    <input class="btn btn-dark" type="submit" value="Submit">
+</form>
 {% endblock content %}
